Fix: Dark mode hides error page text.

--- a/client/filesystem/pages/error.css
+++ b/client/filesystem/pages/error.css
@@ -10,6 +10,10 @@
   font-size: large;
 }
 
+.message.dark-theme {
+  color: whitesmoke;
+}
+
 .code {
   max-width: 350px;
   margin: auto;
